@@ -36,7 +36,8 @@
       defined(__AVR_ATmega163__) || defined(__AVR_ATmega8515__) || \
       defined(__AVR_ATmega8535__) || \
       defined(__AVR_ATmega164P__) || defined(__AVR_ATmega324P__) || \
-      defined(__AVR_ATmega644__) || defined(__AVR_ATmega644P__)
+      defined(__AVR_ATmega644__) || defined(__AVR_ATmega644P__) || \
+      defined(__AVR_ATmega1284P__)
 #  define OC1 PD5
 #  define DDROC DDRD
 #  define OCR OCR1A
